--- a/ux.html
+++ b/ux.html
@@ -159,7 +159,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/iAdvize/743999692242636-ui-ux-designer-h-f'>iAdvize UI/UX Designer H/F | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/iAdvize/743999692242636-ui-ux-designer-h-f'>iAdvize UI/UX Designer H/F | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -181,7 +181,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bcg/c593c93a-9118-4097-9741-ad24aee4c5d4'>BCG Digital Ventures - Lead UX Designer - FinTech Venture Startup</a></h5> 
+<h5><a href='https://jobs.lever.co/bcg/c593c93a-9118-4097-9741-ad24aee4c5d4'>BCG Digital Ventures - Lead UX Designer - FinTech Venture Startup</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -239,7 +239,7 @@
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://endios.join.com/jobs/263747-ui-ux-designer-m-w-d-ab-sofort-vollzeit-unbefristet'>Job @ endios (Hamburg): UI-/UX-Designer (m/w/d) ab... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endios.join.com/jobs/263747-ui-ux-designer-m-w-d-ab-sofort-vollzeit-unbefristet'>Job @ endios (Hamburg): UI-/UX-Designer (m/w/d) ab... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -263,7 +263,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://skylight.workable.com/j/03758ED8E6'>Skylight - Jobs: UX Designer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://skylight.workable.com/j/03758ED8E6'>Skylight - Jobs: UX Designer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -297,7 +297,7 @@
 <p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ShopUp/743999692161562-ux-ui-designer'>ShopUp UX/UI Designer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ShopUp/743999692161562-ux-ui-designer'>ShopUp UX/UI Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dhaka, Bangladesh</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -335,7 +335,7 @@
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/270BD644A7'>CCRi - Jobs: Frontend Software Engineer - UI/UX Development and ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/270BD644A7'>CCRi - Jobs: Frontend Software Engineer - UI/UX Development and ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Are interested in data mining, analytics, and/or machine learning. We're looking 
 for candidates with solid technical foundations and a desire to continue learning.</p>
@@ -366,7 +366,7 @@ or check?...</p>
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on:: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=quEaVfwX&k=Job&j=oCcAafwi&__jvst=Employee&__jvsd=sEMBNhwA&__jvsc=Twitter&bid=ntsPPKwO&jvi=oCcAafwi,Job&jvk=Job'>TaskUs Careers - UX Designer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=quEaVfwX&k=Job&j=oCcAafwi&__jvst=Employee&__jvsd=sEMBNhwA&__jvsc=Twitter&bid=ntsPPKwO&jvi=oCcAafwi,Job&jvk=Job'>TaskUs Careers - UX Designer</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on:: 2019-07-22</p>
 <hr/>
@@ -424,7 +424,7 @@ or check?...</p>
 millions of US and international households. Netflix became well known as a 
 data?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://multiplica-1.workable.com/j/848B2B1987'>Multiplica - Jobs: UX-UI Designer - Apply online</a></h5> 
+<h5><a href='https://multiplica-1.workable.com/j/848B2B1987'>Multiplica - Jobs: UX-UI Designer - Apply online</a></h5> 
 <p><span class="badge badge-light">Madrid, Spain</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -436,7 +436,7 @@ data?...</p>
 <p><span class="badge badge-light">Columbus, Ohio</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://join.join.com/jobs/251743-ux-designer-f-m-d'>Job @ JOIN Solutions (Berlin): UX Designer (f/m/d) | JOIN</a></h5> 
+<h5><a href='https://join.join.com/jobs/251743-ux-designer-f-m-d'>Job @ JOIN Solutions (Berlin): UX Designer (f/m/d) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... I agree with the JOIN Terms & Conditions and Data Privacy Policy. APPLY FOR 
 THIS JOB. Already applied? Check the status of your application. Share this job:.</p>
